# fog_project

./: .gitignore  README.md  api.py  architecture.py  comparison_summary.txt  docker-compose.yml  dockerfile  eda_script.py  heatmap_generator.py  index.html  logs_centralized.txt  logs_fedavg_10epochs_run.txt  main.py  package-lock.json  prompt.txt  pyproject.toml  run_demo.py  run_experiments.py  setup_project.py
Admin/frontend/: index.html
Central_Server/: Dockerfile  server.py
Central_Server/frontend/: admin.html  client.html
Central_Server/frontend/assets/: admin-BJ-NH7Ak.js  admin-lwAhKt5G.css  charts-C1vSz5FD.js  client-dNXFQDY1.js  (+2 more)
Client/: Dockerfile  client.py  ui.py
Client/frontend/: index.html
demo/Hospital_A/: Dockerfile  client_A.py
demo/Hospital_B/: Dockerfile  client_B.py
experiments/: architecture.py  centralized_baseline.json  centralized_train.py  client_A_fedavg.py  client_A_no_dp.py  client_B_fedavg.py  client_B_no_dp.py  fl_metrics_no_dp.json  generate_comparison.py  generate_quick_comparison.py  progress_report.txt  run_all.sh  run_centralized.sh  run_fedavg.sh  run_no_dp.sh  server_fedavg.py  server_no_dp.py
frontend/: admin.html  client.html  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  AppAdmin.vue  AppClient.vue  client.js  router.js  style.css
results/: comparison_summary.txt  fl_metrics_fedavg.json  fl_metrics_fedavg_10epochs.json  fl_metrics_no_dp.json  fl_metrics_original.json  logs_fedavg.txt  logs_fedavg_10epochs.txt  logs_no_dp.txt  logs_no_dp_10epochs.txt  quick_comparison.txt
(+7 files in other folders)
